--- a/Public/index.html
+++ b/Public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,13 +17,13 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      overflow: hidden;
+      min-height: 100vh;
       position: relative;
+      text-align: center;
     }
 
     canvas#bgCanvas {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
@@ -38,9 +37,10 @@
       text-transform: uppercase;
       color: #00ff00;
       text-shadow: 0 0 10px #0f0, 0 0 20px #00ff00, 0 0 40px #00ff88;
-      margin-bottom: 20px;
+      margin: 10px 0 20px;
       z-index: 1;
       position: relative;
+      padding: 0 10px;
     }
 
     .card {
@@ -48,7 +48,8 @@
       border: 2px solid #0f0;
       border-radius: 15px;
       padding: 20px;
-      width: 350px;
+      width: 90%;
+      max-width: 380px;
       text-align: center;
       box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
       backdrop-filter: blur(8px);
@@ -58,7 +59,7 @@
 
     input {
       width: 90%;
-      padding: 10px;
+      padding: 12px;
       font-size: 1rem;
       border: none;
       border-radius: 8px;
@@ -72,12 +73,13 @@
       border: none;
       color: #000;
       font-size: 1rem;
-      padding: 10px 20px;
+      padding: 12px;
       border-radius: 8px;
       cursor: pointer;
       transition: 0.3s;
       font-weight: bold;
       text-transform: uppercase;
+      width: 100%;
     }
 
     button:hover {
@@ -95,11 +97,13 @@
       padding: 10px;
       background: #000;
       box-shadow: 0 0 25px #00ff00;
+      max-width: 100%;
+      height: auto;
     }
 
     .loading-bar {
       margin-top: 15px;
-      width: 90%;
+      width: 100%;
       height: 12px;
       background: rgba(0, 255, 0, 0.1);
       border: 2px solid #0f0;
@@ -123,12 +127,33 @@
     }
 
     footer {
-      position: absolute;
-      bottom: 15px;
+      margin-top: 20px;
       font-size: 0.9rem;
       color: #00ff00;
       text-shadow: 0 0 5px #0f0;
       z-index: 1;
+      position: relative;
+    }
+
+    /* 📱 Responsive Styles */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      .card {
+        padding: 15px;
+        width: 95%;
+      }
+
+      input, button {
+        font-size: 0.95rem;
+        padding: 10px;
+      }
+
+      footer {
+        font-size: 0.75rem;
+      }
     }
   </style>
 </head>
@@ -160,7 +185,6 @@
       const loadingBar = document.getElementById("loading-bar");
       const qrContainer = document.getElementById("qr-container");
 
-      // Show loading bar
       loadingBar.style.display = "block";
       qrContainer.innerHTML = "";
 
@@ -172,7 +196,6 @@
 
       const data = await response.json();
 
-      // Hide loading bar
       loadingBar.style.display = "none";
 
       if (data.qr) {
@@ -204,7 +227,6 @@
     function animate() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.fillStyle = "rgba(0,255,0,0.7)";
-      ctx.font = "bold 12px 'Share Tech Mono', monospace";
 
       words.forEach(word => {
         ctx.font = `bold ${word.size}px 'Share Tech Mono', monospace`;
