--- a/Public/qrcode.html
+++ b/Public/qrcode.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Silent Wolf Session Generator</title>
+  <title>Silent Wolf – QR Session</title>
   <style>
-    /* Base styling */
     body {
       margin: 0;
       padding: 0;
@@ -47,29 +46,31 @@
       }
     }
 
-    /* Container */
-    .container {
+    /* Card container */
+    .card {
       z-index: 2;
       text-align: center;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 40px;
+      background: rgba(0, 0, 0, 0.85);
+      padding: 30px;
       border: 2px solid #00ff00;
       border-radius: 15px;
       box-shadow: 0 0 30px #00ff00, inset 0 0 15px #00ff00;
+      width: 90%;
+      max-width: 400px;
     }
 
     h1 {
+      font-size: 1.8rem;
       margin-bottom: 20px;
-      font-size: 2rem;
       text-shadow: 0 0 15px #00ff00, 0 0 25px #00ff00;
     }
 
     .btn {
       display: block;
-      width: 220px;
+      width: 100%;
       margin: 15px auto;
-      padding: 15px;
-      font-size: 1.2rem;
+      padding: 12px;
+      font-size: 1.1rem;
       font-weight: bold;
       border: none;
       border-radius: 10px;
@@ -85,17 +86,52 @@
       color: black;
       box-shadow: 0 0 30px #00ff00, 0 0 40px #00ff00 inset;
     }
+
+    #qr-container img {
+      margin-top: 20px;
+      border: 3px solid #00ff00;
+      border-radius: 12px;
+      padding: 10px;
+      background: #000;
+      box-shadow: 0 0 25px #00ff00;
+      max-width: 100%;
+      height: auto;
+    }
+
+    .loading-bar {
+      margin-top: 15px;
+      width: 100%;
+      height: 12px;
+      background: rgba(0, 255, 0, 0.1);
+      border: 2px solid #0f0;
+      border-radius: 10px;
+      overflow: hidden;
+      display: none;
+    }
+
+    .loading-bar-inner {
+      height: 100%;
+      width: 0;
+      background: linear-gradient(90deg, #00ff00, #66ff66, #00ff00);
+      animation: loading 2s infinite linear;
+      box-shadow: 0 0 15px #0f0;
+    }
+
+    @keyframes loading {
+      0% { width: 0; }
+      50% { width: 100%; }
+      100% { width: 0; }
+    }
   </style>
 </head>
 <body>
-  <!-- Random floating glowing Silent Wolf texts -->
+  <!-- Floating glowing background -->
   <script>
     for (let i = 0; i < 20; i++) {
       const span = document.createElement("div");
       span.className = "background-text";
       span.textContent = "🐺 SILENT WOLF 🐺";
 
-      // random positions
       span.style.setProperty("--x-start", `${Math.random() * 100 - 50}vw`);
       span.style.setProperty("--y-start", `${Math.random() * 100 - 50}vh`);
       span.style.setProperty("--x-mid", `${Math.random() * 100 - 50}vw`);
@@ -103,7 +139,6 @@
       span.style.setProperty("--x-end", `${Math.random() * 100 - 50}vw`);
       span.style.setProperty("--y-end", `${Math.random() * 100 - 50}vh`);
 
-      // random animation duration
       span.style.animationDuration = `${15 + Math.random() * 20}s`;
       span.style.left = `${Math.random() * 100}vw`;
       span.style.top = `${Math.random() * 100}vh`;
@@ -112,11 +147,45 @@
     }
   </script>
 
-  <!-- Main content -->
-  <div class="container">
-    <h1>Silent Wolf Session Generator</h1>
-    <button class="btn" onclick="window.location.href='qrcode.html'">Generate QR Code</button>
-    <button class="btn" onclick="window.location.href='paircode.html'">Generate Pair Code</button>
+  <!-- Main QR Code Generator -->
+  <div class="card">
+    <h1>🐺 Generate QR Session</h1>
+    <button class="btn" onclick="generateQR()">Generate QR Code</button>
+    <div class="loading-bar" id="loading-bar">
+      <div class="loading-bar-inner"></div>
+    </div>
+    <div id="qr-container"></div>
+    <button class="btn" onclick="window.location.href='index.html'">⬅ Back</button>
   </div>
+
+  <script>
+    async function generateQR() {
+      const loadingBar = document.getElementById("loading-bar");
+      const qrContainer = document.getElementById("qr-container");
+
+      loadingBar.style.display = "block";
+      qrContainer.innerHTML = "";
+
+      try {
+       const response = await fetch("/generateQR");
+
+        const data = await response.json();
+
+        loadingBar.style.display = "none";
+
+        if (data.qr) {
+          const img = document.createElement("img");
+          img.src = data.qr;
+          img.alt = "QR Code";
+          qrContainer.appendChild(img);
+        } else {
+          qrContainer.innerHTML = "<p style='color:red'>❌ Failed to generate QR</p>";
+        }
+      } catch (err) {
+        loadingBar.style.display = "none";
+        qrContainer.innerHTML = "<p style='color:red'>⚠ Error fetching QR</p>";
+      }
+    }
+  </script>
 </body>
 </html>
